syntax = "proto3";

option java_multiple_files = true;
option java_package = "se.umu.cs";
option java_outer_classname = "RpcFileMessage";

package se.umu.cs;

message NeoFile {
    bytes file = 1;
    string sourceType = 2;
    string targetType = 3;
    string outputTopic = 4;
}